--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,4 @@
-<h1>ホーム</h1>
-<p>ここはホーム画面です</p>
+<% for animal in @animals %>
+  <p><%= animal %>さんが好きです。</p>
+<% end %>
+<h1>だけど<%= @animals[0] %>さんが一番好きです。</h1>
