added form page

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -43,6 +43,7 @@
             <li class="active"><a href="/">ホーム</a></li>
             <li><a href="/primes">素数のページ</a></li>
             <li><a href="https://king.kcg.kyoto/campus/Course/13913/70/">コースページ</a></li>
+            <li><a href="/form">お問合わせ</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
