confirm action added

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -40,7 +40,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/">ホーム</a></li>
+            <li><a href="/">ホーム</a></li>
             <li><a href="/primes">素数のページ</a></li>
             <li><a href="https://king.kcg.kyoto/campus/Course/13913/70/">コースページ</a></li>
             <li><a href="/form">お問合わせ</a></li>
