--- a/views/form.erb
+++ b/views/form.erb
@@ -1,18 +1,18 @@
-<form style="text-align: left">
+<form style="text-align: left" action="/confirm" method="POST">
   <div class="form-group">
     <label for="exampleInput">お名前</label>
-    <input type="text" class="form-control" id="exampleInput" aria-describedby="nameHelp" placeholder="お名前">
-    <small id="emailHelp" class="form-text text-muted">お名前を記入ください。</small>
+    <input type="text" name="name" class="form-control" id="nameInput" aria-describedby="nameHelp" placeholder="お名前">
+    <small id="nameHelp" class="form-text text-muted">お名前を記入ください。</small>
   </div>
   <div class="form-group">
     <label for="exampleInputEmail1">Email</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+    <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
     <small id="emailHelp" class="form-text text-muted">E-mailアドレスをご記入ください。</small>
   </div>
 
   <div class="form-group">
     <label for="exampleTextarea">お問合わせ内容</label>
-    <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+    <textarea class="form-control" name="content" id="exampleTextarea" rows="3"></textarea>
   </div>
 
   <button type="submit" class="btn btn-primary">送信</button>
